--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 Pillow==7.0.0
+psycopg2==2.8.4
 pycodestyle==2.5.0
 pycparser==2.19
 pylint==2.4.4
