--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "dot-object": "^2.1.3",
+    "file-loader": "^6.0.0",
     "material-table": "^1.57.2",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
