--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.2",
     "webpack": "^4.42.1",
+    "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
